# tropoform

./: .gitattributes  .gitignore  AUTHORS  ChangeLog  Changelog.rst  LICENSE  MANIFEST.in  Pipfile  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: publish.yml  pythonpublish.yml  test-publish.yml  unitttest.yml
test/: sample_tropo_module.py  test_tropoform.py
tests/: __init__.py  test_tropoform.py
tests/fixtures/: sample.parms.yaml  sample.parms2.yaml  sample_template.json  sample_template.yaml  sample_tropo_module.py
tropoform/: _version.py  tropoform.py
