[metadata]
name = tropoform
author = Brian Peterson
author_email = brian.peterson@cloudshift.cc
summary = A Terraform like utility for managing AWS Cloud Formation Stacks with troposphere
license = MIT
description_file = README.md
home_page = https://github.com/cloudshiftstrategies/tropoform
python_requires = >=3
classifier =
    Development Status :: 4 - Alpha
    Environment :: Console
    Intended Audience :: Information Technology
    Intended Audience :: AWS Administrators
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[entry_points]
console_scripts=
    tropoform = tropoform.tropoform:main

[files]
packages=
    tropoform

[versioneer]
VCS = git
style = pep440
versionfile_source = tropoform/_version.py
versionfile_build = build/_version.py
tag_prefix = 'v'
print(foo)
